--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.9.0",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.0.3"
@@ -34,6 +37,7 @@
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
     "@types/react": "^18.2.6",
+    "@types/react-native-material-dropdown": "^0.11.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
